package.json fixups

--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
-{
-  "name": "browser-shim",
-  "description": "Easy sharing of scripts between NodeJS and the browser.",
-  "version": "0.1.0",
-  "homepage": "http://github.com/laurie71/browser-shim/",
-  "author": "Laurie Harper (http://laurie71.github.com/)",
-  "directories": {
-    "lib": "lib/browser-shim"
-  },
-  "scripts": {
-    "test": "expresso -I lib"
-  },
-  "engines": {
-    "node": "*"
-  }
+{ "version": "0.1.0"
+, "name": "browser-shim"
+, "description": "Easy sharing of scripts between NodeJS and the browser."
+, "homepage": "http://http://laurie71.github.com/browser-shim/"
+, "author": "Laurie Harper (http://laurie71.github.com/)"
+, "keywords": "node browser connect express"
+
+, "repository":
+    { "type" : "git"
+    , "url"  : "http://github.com/laurie71/browser-shim.git"
+    }
+
+, "directories":
+    { "doc": "doc"
+    , "lib": "lib/browser-shim"
+    }
+, "scripts":
+    { "test": "expresso -I lib"
+    }
+, "engines":
+    { "node": "*"
+    }
 }
